# multiRetina

./: .gitignore  README.md  pyproject.toml
preprocessing/: structured_split.py
scripts/: run_automorph.py  run_fusion_eval.py  run_retfound.py  run_split.py  run_stats.py
src/features/: uno.py
src/fusion/: run_classifier.py
src/preprocessing/: structured_split.py
src/statistics/: vessel_tests.py
